#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package DataPortal
#------------------------------------------------------------------------

Package author: Igor Gaponenko

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-10-00
2015-04-23 Igor Gaponenko
- allowed to pass an optional parameter for the instrument name
when collecting data statistics at application statistics.php.
- got rid of the obsolete application DataMigrationMonitor and
the corresponding methods in the library class config.php. It has
now a more sophisticated implementation at sysmon/dmmon (JIRA PSDH-34).

Tag: V00-09-01
2015-04-16 Igor Gaponenko
- minor improvements in the Run Tables UI
- more option parsers added and bugs fixed in the ServiceJSON and Service
PHP frameworks for Web services
- removed any notions of runs from the e-Log UI of facilities

Tag: V00-09-00
2015-03-10 Igor Gaponenko
- Re-factoring HDF5 translation ordering application (PSWA-35)
- Web application to configure the Monitoring Interface Controller (PSWA-32)
- Automated update of run tables when new runs reported by the DAQ (PSWA-31)
- DAQ detectors run table migration (PSWA-37)
- minor changes to the UI design of some applications: unified page refresh
button, unified location of the page update timestamp
- updated base class for Web services Service to match the API of ServiceJSON

Tag: V00-08-08
2014-12-19 Igor Gaponenko
- finished refactoring Web services as per JIRA ticket PSDH-20

Tag: V00-08-07
2014-12-19 Igor Gaponenko
- refactoring Web services as per JIRA ticket PSDH-20
- renaming WS: SearchFiles into filemgs_files_search, and
MoveFile into filemgr_files_move
- extended/improved parameters parser in PHP class ServiceJSON

Tag: V00-08-06
2014-12-08 Igor Gaponenko
- fixed a minor typo in a context of JIRA PSWA-19

Tag: V00-08-05
2014-12-08 Igor Gaponenko