@@ -2,8 +2,8 @@
 <project-private xmlns="http://www.netbeans.org/ns/project-private/1">
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
-        <group name="PCDS Web App"/>
         <group/>
+        <group name="PCDS Web App"/>
         <group name="PCDS Web Apps"/>
     </open-files>
 </project-private>
